[tool.poetry]
name = "TheF"
version = "0.1.0"
description = "Shorthand ?! Press The F!"
authors = ["John Aldrich Bernardo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
configparser = "^4.0.2"
pathlib = "^1.0.1"
Path = "^13.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
